--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -7,12 +7,12 @@
     tools:context=".ui.join.JoinPart1Activity">
 
     <View
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_height="5dp"
         android:background="@color/main_theme_blue"
-        app:layout_constraintBottom_toTopOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.33" />
 
     <TextView
         android:id="@+id/textview_join_membership"
@@ -26,7 +26,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084" />
+        app:layout_constraintVertical_bias="0.032" />
 
     <ImageButton
         android:id="@+id/imagebutton_back"
@@ -37,7 +37,8 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
-        app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/textview_join_membership" />
 
@@ -45,35 +46,39 @@
         android:id="@+id/textview_join_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="289dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_email"
         android:textColor="@color/general_theme_black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_join_membership"
-        app:layout_constraintStart_toStartOf="@id/imagebutton_back"
-        app:layout_constraintTop_toBottomOf="@id/textview_join_membership" />
+        app:layout_constraintBottom_toTopOf="@id/edittext_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/edittext_email"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/selector_default_textbox"
         android:hint="@string/user_email"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="15dp"
         android:paddingVertical="10dp"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_join_email"
-        app:layout_constraintWidth_percent="0.91" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.36"
+        app:layout_constraintWidth_percent="0.912" />
 
     <TextView
         android:id="@+id/textview_error_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="11dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:textColor="@color/general_theme_red"
         android:textSize="12sp"
@@ -84,13 +89,15 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_send"
         style="@style/DefaultButton"
-        android:layout_width="318dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="@string/certification_code"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_email"
-        app:layout_constraintStart_toStartOf="@+id/edittext_email"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.734"
+        app:layout_constraintWidth_percent="0.884" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
