--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -8,12 +8,12 @@
     tools:context=".ui.join.JoinPart2Activity">
 
     <View
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_height="5dp"
         android:background="@color/main_theme_blue"
-        app:layout_constraintBottom_toTopOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.33" />
 
     <TextView
         android:id="@+id/textview_join_membership"
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084" />
+        app:layout_constraintVertical_bias="0.032" />
 
     <ImageButton
         android:id="@+id/button_back"
@@ -38,7 +38,8 @@
         android:scaleType="centerInside"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
-        app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/textview_join_membership" />
 
@@ -46,13 +47,22 @@
         android:id="@+id/textview_send_certification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/send_certification_code"
         android:textColor="@color/general_theme_black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@id/textview_join_membership"
-        app:layout_constraintTop_toBottomOf="@id/textview_join_membership" />
+        app:layout_constraintBottom_toTopOf="@id/margin_1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.097"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <View
+        android:id="@+id/margin_1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/textview_email"
+        app:layout_constraintBottom_toTopOf="@id/textview_email"
+        app:layout_constraintHeight_percent="0.010" />
 
     <TextView
         android:id="@+id/textview_email"
@@ -63,10 +73,12 @@
         android:padding="15dp"
         android:textColor="@color/general_theme_black"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_send_certification"
-        app:layout_constraintWidth_percent="0.91"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.286"
+        app:layout_constraintWidth_percent="0.912"
         tools:text="ttukttak@ttukttak.com" />
 
     <EditText
