--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.HomeActivity"
     android:gravity="bottom"
     app:umanoDragView="@id/dragView"
-    app:umanoPanelHeight="82dp"
     app:umanoOverlay="true"
-    app:umanoShadowHeight="0dp">
+    app:umanoPanelHeight="82dp"
+    app:umanoShadowHeight="0dp"
+    tools:context=".ui.main.HomeActivity">
     <!-- gravity 를 bottom으로 하면 아래에서 위로 드래그, top으로 하면 위에서 아래로 드래그 할 수 있다.
          umanoDragView 드래그 해서 보여줄 view를 선택
          umanoScrollableView  슬라이딩 패널에 내용물이 패널에 표시되는것보다 많을 때 스크롤 해서 보여줄 view 부분
@@ -27,89 +27,103 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:textSize="20sp"
-            android:textColor="@color/general_theme_white"
             android:text="@string/text_start"
-            app:layout_constraintVertical_bias="0.75"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textColor="@color/general_theme_white"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@id/imagebutton_start"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/imagebutton_start" />
+            app:layout_constraintVertical_bias="0.75" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/home_animation" />
 
         <ImageButton
             android:id="@+id/imagebutton_start"
             android:layout_width="230dp"
             android:layout_height="230dp"
-            android:src="@drawable/ic_start"
             android:background="@drawable/circle"
-            android:layout_marginBottom="50dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/ic_start"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/layout_latest"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-       <androidx.constraintlayout.widget.ConstraintLayout
-           android:id="@+id/layout_latest"
-           android:layout_width="match_parent"
-           android:layout_height="150dp"
-           android:layout_marginHorizontal="13dp"
-           android:layout_marginBottom="118dp"
-           android:paddingHorizontal="30dp"
-           android:background="@drawable/bg_rectangle_round"
-           android:backgroundTint="@color/system_theme_subwhite"
-           app:layout_constraintBottom_toBottomOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintEnd_toEndOf="parent" >
+        <!-- Todo: 디자인 수정 -->
 
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/noto_sans_kr_bold"
-               android:includeFontPadding="false"
-               android:textSize="12sp"
-               android:textColor="@color/system_theme_gray"
-               android:text="@string/latest_result"
-               app:layout_constraintVertical_bias="0.25"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintBottom_toBottomOf="parent"
-               app:layout_constraintStart_toStartOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_latest"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginHorizontal="13dp"
+            android:background="@drawable/bg_rectangle_round"
+            android:backgroundTint="@color/system_theme_subwhite"
+            android:paddingHorizontal="30dp"
+            app:layout_constraintTop_toBottomOf="@id/imagebutton_start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-           <TextView
-               android:id="@+id/textview_latest_result_text"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/noto_sans_kr_bold"
-               android:includeFontPadding="false"
-               android:textSize="16sp"
-               android:textColor="@color/general_theme_black"
-               tools:text="부팅디스크(SSD) 접촉불량"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintBottom_toBottomOf="parent"
-               app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
+                android:text="@string/latest_result"
+                android:textColor="@color/system_theme_gray"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.25" />
 
-           <TextView
-               android:id="@+id/textview_latest_result_time"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/noto_sans_kr_bold"
-               android:includeFontPadding="false"
-               android:textSize="12sp"
-               android:textColor="@color/system_theme_gray"
-               tools:text="2023.04.16 00:00"
-               app:layout_constraintVertical_bias="0.75"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintBottom_toBottomOf="parent"
-               app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/textview_latest_result_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
+                android:textColor="@color/general_theme_black"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="부팅디스크(SSD) 접촉불량" />
 
-           <ImageView
-               android:layout_width="7.5dp"
-               android:layout_height="13dp"
-               android:src="@drawable/ic_front"
-               app:tint="@color/system_theme_gray"
-               app:layout_constraintTop_toTopOf="parent"
-               app:layout_constraintBottom_toBottomOf="parent"
-               app:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/textview_latest_result_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:includeFontPadding="false"
+                android:textColor="@color/system_theme_gray"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.75"
+                tools:text="2023.04.16 00:00" />
 
-       </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:layout_width="7.5dp"
+                android:layout_height="13dp"
+                android:src="@drawable/ic_front"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/system_theme_gray" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -118,9 +132,9 @@
         android:id="@+id/dragView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_slider"
         android:clickable="true"
-        android:focusable="false"
-        android:background="@drawable/bg_slider" >
+        android:focusable="false">
 
         <ImageView
             android:id="@+id/slide_arrow"
@@ -128,27 +142,27 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:src="@drawable/ic_up"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="600dp"
             android:layout_marginTop="82dp"
+            android:background="@drawable/bg_slider"
             android:paddingHorizontal="20dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/bg_slider" >
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/button_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_setting"
                 android:background="@android:color/transparent"
+                android:src="@drawable/ic_setting"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
