--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,96 +8,113 @@
 
     <!--  FixMe: 디자인 수정 필요  -->
 
+    <!--  뒤로 가기 레이아웃  -->
     <ImageButton
         android:id="@+id/button_back"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:backgroundTint="@android:color/transparent"
         android:src="@drawable/ic_back"
+        android:contentDescription="@string/bcak_content_description"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintHorizontal_bias="0.0444"
+        app:layout_constraintVertical_bias="0.075" />
 
+    <!--  뚝딱 로고 레이아웃  -->
+    <!-- TODO: 배경과 글자색 텍스트 대비비율로 인한 경고 표시 발생   -->
     <ImageView
         android:id="@+id/imageview_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="62dp"
         android:background="@drawable/ic_logo"
-        app:layout_constraintBottom_toTopOf="@id/edittext_email"
+        android:contentDescription="@string/logo_content_description"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_back" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2288"
+        android:autofillHints="email"/>
 
+    <!-- TODO: EditText 문제점 퍼센트로 가로 넓이를 지정하면 기본적으로 크기로 인한 오류 문제로 논의 필요   -->
+    <!--  이메일 입력 레이아웃  -->
     <EditText
         android:id="@+id/edittext_email"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="328dp"
+        android:layout_height="48dp"
         android:background="@drawable/selector_default_textbox"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="10dp"
         android:textSize="14sp"
+        android:paddingHorizontal="19dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageview_logo"
-        app:layout_constraintWidth_percent="0.91" />
+        app:layout_constraintVertical_bias="0.1138"
+        android:autofillHints="@string/email_autofill"
+        />
 
+    <!--  비밀번호 입력 레이아웃  -->
     <EditText
         android:id="@+id/editText_password"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="328dp"
+        android:layout_height="48dp"
         android:background="@drawable/selector_default_textbox"
         android:hint="@string/pw"
         android:inputType="textPassword"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="10dp"
+        android:paddingHorizontal="19dp"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edittext_email"
-        app:layout_constraintWidth_percent="0.91" />
+        app:layout_constraintVertical_bias="0.0184"
+        android:autofillHints="@string/email_autofill" />
 
+    <!--  오류 메세지 입력 레이아웃  -->
+    <!-- TODO: 오류 메세지 위치를 기존 피그마를 이용해 값을 입력하면 피그마와 위치 차이가 생김  -->
     <TextView
         android:id="@+id/textview_error_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
         android:textColor="@color/general_theme_red"
         android:textSize="11sp"
-        app:layout_constraintStart_toStartOf="@id/editText_password"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editText_password"
+        app:layout_constraintVertical_bias="0.0237"
+        app:layout_constraintHorizontal_bias="0.0944"
         tools:text="@string/wrong_email_or_password" />
 
+    <!--  로그인 버튼 레이아웃  -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_login"
         style="@style/DefaultButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="318dp"
+        android:layout_height="56dp"
         android:text="@string/login"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editText_password" />
+        app:layout_constraintTop_toBottomOf="@id/textview_error_message"
+        app:layout_constraintVertical_bias="0.0593"/>
 
+    <!--  계정 찾기 텍스트 레이아웃  -->
     <TextView
         android:id="@+id/text_find_id_or_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
         android:text="@string/find_id_or_pw1"
+        android:textColor="@color/general_theme_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_login" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_login"
+        app:layout_constraintVertical_bias="0.065"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
