--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/general_theme_black</item>
+        <item name="colorOnSecondary">@color/general_theme_white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <!-- Customize your theme here. -->
@@ -22,6 +22,12 @@
     <style name="Theme.Android_TtuckTtak.Home" parent="Theme.Android_TtuckTtak">
         <item name="android:statusBarColor">@color/main_theme_blue</item>
         <item name="android:windowBackground">@color/main_theme_blue</item>
+    </style>
+
+    <!-- Setting theme. -->
+    <style name="Theme.Android_TtuckTtak.Setting" parent="Theme.Android_TtuckTtak">
+        <item name="android:statusBarColor">@color/general_theme_white</item>
+        <item name="android:windowBackground">@color/general_theme_white</item>
     </style>
 
     <!-- Splash theme. -->
