--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -81,7 +81,7 @@
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/edittext_name"
         app:layout_constraintTop_toBottomOf="@id/edittext_name"
-        tools:text="@string/overlap_nikname" />
+        tools:text="@string/overlap_nickname" />
 
     <TextView
         android:id="@+id/textview_join_user_password"
