--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     app:umanoDragView="@id/dragView"
     app:umanoOverlay="true"
     app:umanoPanelHeight="82dp"
-    app:umanoShadowHeight="0dp"
+    app:umanoShadowHeight="19dp"
     tools:context=".ui.main.HomeActivity">
     <!-- gravity 를 bottom으로 하면 아래에서 위로 드래그, top으로 하면 위에서 아래로 드래그 할 수 있다.
          umanoDragView 드래그 해서 보여줄 view를 선택
@@ -64,11 +64,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_latest"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="123dp"
             android:layout_marginHorizontal="13dp"
             android:background="@drawable/bg_rectangle_round"
             android:backgroundTint="@color/system_theme_subwhite"
             android:paddingHorizontal="30dp"
+            app:layout_constraintVertical_bias="0.146"
             app:layout_constraintTop_toBottomOf="@id/imagebutton_start"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
