[CHORE] xml 파일 정리 - 불필요한 파일 제거 - 파일 이름 변경

--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -19,7 +19,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@id/textview_find_id_or_pw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.07"
@@ -61,7 +61,7 @@
         android:id="@+id/edittext_email"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/email_reconfirm2"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="15dp"
