--- a/app/src/main/res/layout/activity_join_part1.xml
+++ b/app/src/main/res/layout/activity_join_part1.xml
@@ -35,7 +35,7 @@
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/blank_text"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
         app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:id="@+id/edittext_email"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/user_email"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="15dp"
