--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -36,7 +36,7 @@
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/blank_text"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
         app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/input_certification_code"
         android:inputType="number"
         android:maxLength="8"
