--- a/app/src/main/res/layout/activity_settings_alert.xml
+++ b/app/src/main/res/layout/activity_settings_alert.xml
@@ -30,7 +30,7 @@
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/blank_text"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textview_alertSetting"
         app:layout_constraintEnd_toStartOf="@+id/textview_alertSetting"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:thumb="@drawable/switch_thumb"
-        android:track="@drawable/selector_switch"
+        android:track="@drawable/switch_track"
         app:layout_constraintBottom_toBottomOf="@id/textview_eventPushAlert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textview_eventPushAlertAdditional"
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:thumb="@drawable/switch_thumb"
-        android:track="@drawable/selector_switch"
+        android:track="@drawable/switch_track"
         app:layout_constraintBottom_toBottomOf="@id/textview_nightTimePushAlert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/textview_nightTimePushAlertAdditional"
