--- a/app/src/main/res/drawable/ic_arrow_right.xml
+++ b/app/src/main/res/drawable/ic_arrow_right.xml
@@ -1,5 +1,5 @@
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/ic_back"
+    android:drawable="@drawable/ic_arrow_left"
     android:fromDegrees="180"
     android:toDegrees="0"
     android:pivotX="50%"
