--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -36,7 +36,7 @@
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/blank_text"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@id/textview_join_membership"
         app:layout_constraintEnd_toStartOf="@id/textview_join_membership"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/user_name"
         android:inputType="text"
         android:paddingHorizontal="15dp"
@@ -100,7 +100,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/pw"
         android:inputType="textPassword"
         android:paddingHorizontal="15dp"
@@ -130,7 +130,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="80dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/password_check"
         android:inputType="textPassword"
         android:paddingHorizontal="15dp"
