--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:backgroundTint="@android:color/transparent"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.07"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="62dp"
-        android:background="@drawable/ic_logo"
+        android:background="@drawable/img_logo_text"
         app:layout_constraintBottom_toTopOf="@id/edittext_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="60dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="15dp"
@@ -54,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/selector_default_textbox"
+        android:background="@drawable/textbox"
         android:hint="@string/pw"
         android:inputType="textPassword"
         android:paddingHorizontal="15dp"
