--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -29,7 +29,7 @@
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/blank_text"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_back"
+        android:src="@drawable/ic_arrow_left"
         app:layout_constraintBottom_toBottomOf="@+id/textview_ChangeSettings"
         app:layout_constraintEnd_toStartOf="@+id/textview_ChangeSettings"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +101,7 @@
             android:backgroundTint="@android:color/transparent"
             android:clickable="false"
             android:contentDescription="@string/blank_text"
-            android:src="@drawable/ic_front"
+            android:src="@drawable/ic_arrow_right"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -126,7 +126,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_front"
+            android:drawableEnd="@drawable/ic_arrow_right"
             android:drawableTint="@color/general_theme_white"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/alert_setting"
@@ -143,7 +143,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_front"
+            android:drawableEnd="@drawable/ic_arrow_right"
             android:drawableTint="@color/general_theme_white"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/consumer_center"
@@ -170,7 +170,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_front"
+            android:drawableEnd="@drawable/ic_arrow_right"
             android:drawableTint="@color/general_theme_white"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/review"
@@ -187,7 +187,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_front"
+            android:drawableEnd="@drawable/ic_arrow_right"
             android:drawableTint="@color/general_theme_white"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/help"
@@ -204,7 +204,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_front"
+            android:drawableEnd="@drawable/ic_arrow_right"
             android:drawableTint="@color/general_theme_white"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/use"
