--- a/app/src/main/res/layout/activity_solution_before.xml
+++ b/app/src/main/res/layout/activity_solution_before.xml
@@ -29,7 +29,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="15dp"
             android:backgroundTint="@android:color/transparent"
-            android:src="@drawable/ic_back"
+            android:src="@drawable/ic_arrow_left"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -214,7 +214,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:src="@drawable/ic_up"
+            android:src="@drawable/ic_arrow_up"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
