--- a/app/src/main/res/layout/activity_terms_use.xml
+++ b/app/src/main/res/layout/activity_terms_use.xml
@@ -20,7 +20,7 @@
             android:backgroundTint="@android:color/transparent"
             android:contentDescription="@string/blank_text"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_back"
+            android:src="@drawable/ic_arrow_left"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_back"
-            app:srcCompat="@drawable/ic_logo" />
+            app:srcCompat="@drawable/img_logo_text" />
 
         <TextView
             android:id="@+id/textview_title"
